<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_homepage">

    <fragment
        android:id="@+id/nav_homepage"
        android:name="com.example.myapplication.HomePage"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_page" />

    <fragment
        android:id="@+id/nav_form"
        android:name="com.example.myapplication.FormPage"
        android:label="@string/Booking_form"
        tools:layout="@layout/fragment_form" />

    <fragment
        android:id="@+id/nav_features"
        android:name="com.example.myapplication.FeaturesPage"
        android:label="@string/features"
        tools:layout="@layout/fragment_features" />

    <fragment
        android:id="@+id/nav_plans"
        android:name="com.example.myapplication.PlansPage"
        android:label="@string/plans"
        tools:layout="@layout/fragment_plans" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.myapplication.AboutPage"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_aboutus" />
</navigation>